--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MY PAGE</title>
 </head>
 <body>
-    
+    <h1>Page about me</h1>
+    <a href="homework/about_me.html">На русском</a>
+    <a href="homework/about_me_eng.html">На английском</a>
 </body>
 </html>
