--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <h1>Page about me</h1>
         <h2>Lesson 1</h2>
             <ul> 
-                <li><a href="homework/about_me.html">На русском</a></li>
-                <li><a href="homework/about_me_eng.html">На английском</a></li>
+                <li><a href="homework/about_me">На русском</a></li>
+                <li><a href="homework/about_me_eng">На английском</a></li>
             </ul>
         <h2>Lesson 2</h2>
             <ul>
-                <li><a href="homework2/Task 1/index.html">Задача 1</a></li>
-                <li><a href="homework2/Task 2/index.html">Задача 2</a></li>
+                <li><a href="homework2/Task 1/index">Задача 1</a></li>
+                <li><a href="homework2/Task 2/index">Задача 2</a></li>
             </ul>
     </body>
 </html>
