Edit my home page

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
             <ul>
                 <li><a href="homework2/Task 1/index">Задача 1</a></li>
                 <li><a href="homework2/Task 2/index">Задача 2</a></li>
+                <li><a href="homework2/Task 3/index">Дополнительное задание</a></li>
             </ul>
+        
     </body>
 </html>
