add homework with layout

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
                 <li><a href="homework2/Task 2/index">Задача 2</a></li>
                 <li><a href="homework2/Task 3/index">Дополнительное задание</a></li>
             </ul>
+        <h2>Lesson 5</h2>
+        <a href="homework5/index.html">Задача по макетам</a>
         
     </body>
 </html>
