--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
             </ul>
         <h2>Lesson 5</h2>
         <a href="homework5/index.html">Задача по макетам</a>
+        <h2>Lesson 6</h2>
+            <ul>
+                <li><a href="homework6/homework6.1/index"></a>Задача 1</li>
+                <li><a href="homework6/index"></a>Задача 2</li>
+            </ul>
         
     </body>
 </html>
