edit main index.html

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <a href="homework5/index.html">Задача по макетам</a>
         <h2>Lesson 6</h2>
             <ul>
-                <li><a href="homework6/homework6.1/index"></a>Задача 1</li>
-                <li><a href="homework6/index"></a>Задача 2</li>
+                <li><a href="homework6/homework6.1/index">Задача 1</a></li>
+                <li><a href="homework6/index">Задача 2</a></li>
             </ul>
         
     </body>
