add homework 7 task 1

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
                 <li><a href="homework6/homework6.1/index">Задача 1</a></li>
                 <li><a href="homework6/index">Задача 2</a></li>
             </ul>
+        <h2>Lesson7</h2>
+        <ul>
+            <li><a href="homework7.1/index"></a>Namaste</li>
+        </ul>
         
     </body>
 </html>
