--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </ul>
         <h2>Lesson7</h2>
         <ul>
-            <li><a href="homework7.1/index"></a>Namaste</li>
+            <li><a href="homework7.1/index">Namaste</a></li>
         </ul>
         
     </body>
