add homework "Weather" and fix "Namaste"

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <h2>Lesson7</h2>
         <ul>
             <li><a href="homework7.1/index">Namaste</a></li>
+            <li><a href="homework7.2/index">Weather</a></li>
         </ul>
         
     </body>
