--- a/homework7.1/index.html
+++ b/homework7.1/index.html
@@ -19,8 +19,8 @@
             judge our performance according to the impact it</p>
         <ul class="cards_1">
             <li class="cards">
-                <ul>
-                    <li class="card">
+                <div>
+                    <div class="card">
                         <div class="icon_wrap">
                             <a href="#" class="icon icon_anchor" title="anchor"></a>
                         </div>
@@ -32,12 +32,12 @@
                             is key to any successful website, so take a look at 
                             your website's content on a regular basis. 
                         </p>
-                    </li>
-                </ul>
+                    </div>
+                </div>
             </li>
             <li class="cards">
-                <ul>
-                    <li class="card">
+                <div>
+                    <div class="card">
                         <div class="icon_wrap">
                             <a href="#" class="icon icon_diamond" title="diamond"></a>
                         </div>
@@ -49,12 +49,12 @@
                             is key to any successful website, so take a look at 
                             your website's content on a regular basis. 
                         </p>
-                    </li>
-                </ul>
+                    </div>
+                </div>
             </li>
             <li class="cards">
-                <ul>
-                    <li class="card">
+                <div>
+                    <div class="card">
                         <div class="icon_wrap">
                             <a href="#" class="icon icon_eyeglasses" title="eyeglasses"></a>
                         </div>
@@ -66,12 +66,12 @@
                             is key to any successful website, so take a look at 
                             your website's content on a regular basis. 
                         </p>
-                    </li>
-                </ul>
+                    </div>
+                </div>
             </li>
             <li class="cards">
-                <ul>
-                    <li class="card">
+                <div>
+                    <div class="card">
                         <div class="icon_wrap">
                             <a href="#" class="icon icon_monitor" title="monitor"></a>
                         </div>
@@ -83,8 +83,8 @@
                             is key to any successful website, so take a look at 
                             your website's content on a regular basis. 
                         </p>
-                    </li>
-                </ul>
+                    </div>
+                </div>
             </li>
         </ul>
     </div>
