fix main index file

--- a/index.html
+++ b/index.html
@@ -10,26 +10,26 @@
     <h1>Page about me</h1>
         <h2>Lesson 1</h2>
             <ul> 
-                <li><a href="homework/about_me">На русском</a></li>
-                <li><a href="homework/about_me_eng">На английском</a></li>
+                <li><a href="homework/about_me" target="_blank">На русском</a></li>
+                <li><a href="homework/about_me_eng" target="_blank">На английском</a></li>
             </ul>
         <h2>Lesson 2</h2>
             <ul>
-                <li><a href="homework2/Task 1/index">Задача 1</a></li>
-                <li><a href="homework2/Task 2/index">Задача 2</a></li>
-                <li><a href="homework2/Task 3/index">Дополнительное задание</a></li>
+                <li><a href="homework2/Task 1/index" target="_blank">Задача 1</a></li>
+                <li><a href="homework2/Task 2/index" target="_blank">Задача 2</a></li>
+                <li><a href="homework2/Task 3/index" target="_blank">Дополнительное задание</a></li>
             </ul>
         <h2>Lesson 5</h2>
-        <a href="homework5/index.html">Задача по макетам</a>
+        <a href="homework5/index.html" target="_blank">Задача по макетам</a>
         <h2>Lesson 6</h2>
             <ul>
-                <li><a href="homework6/homework6.1/index">Задача 1</a></li>
-                <li><a href="homework6/index">Задача 2</a></li>
+                <li><a href="homework6/homework6.1/index" target="_blank">Задача 1</a></li>
+                <li><a href="homework6/index" target="blank">Задача 2</a></li>
             </ul>
         <h2>Lesson7</h2>
         <ul>
-            <li><a href="homework7.1/index">Namaste</a></li>
-            <li><a href="homework7.2/index">Weather</a></li>
+            <li><a href="homework7.1/index" target="_blank">Namaste</a></li>
+            <li><a href="homework7.2/index" target="_blank">Weather</a></li>
         </ul>
         
     </body>
