--- a/homework7.2/index.html
+++ b/homework7.2/index.html
@@ -9,7 +9,7 @@
     <title>Weather</title>
 </head>
 <body>
-    <div>CSS Weather Forecast <i class="wi wi-sunrise"></i></div>
+    <div class="slogan">CSS Weather Forecast <i class="wi wi-sunrise"></i></div>
     <div class="container">
         <ul>
             <li class="lisbon">
