add homework 8 (only with cups)

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
             <li><a href="homework7.1/index" target="_blank">Namaste</a></li>
             <li><a href="homework7.2/index" target="_blank">Weather</a></li>
         </ul>
+        <h2>Lesson8</h2>
+        <ul>
+            <li><a href="homework8/homework8.1/index" target="_blank">Cups</a></li>
+        </ul>
         
     </body>
 </html>
