add homework 8 (fantastic design), fixed "cups"

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <h2>Lesson8</h2>
         <ul>
             <li><a href="homework8/homework8.1/index" target="_blank">Cups</a></li>
+            <li><a href="homework8/homework8.2/index" target="_blank">Fantastic Design</a></li>
         </ul>
         
     </body>
