Add homework 9 (Willow Crest)

--- a/homework8/homework8.1/index.html
+++ b/homework8/homework8.1/index.html
@@ -19,7 +19,7 @@
                 &#36;2
             </div>
             <div class="icon_wrap">
-                <a href="#" class="icon icon_bronze" title="bronze"></a>
+                <div href="#" class="icon icon_bronze" title="bronze"></div>
             </div>
             <div class="title">
                 Bronze
@@ -33,7 +33,7 @@
                 &#36;3
             </div>
             <div class="icon_wrap">
-                <a href="#" class="icon icon_gold" title="gold"></a>
+                <div href="#" class="icon icon_gold" title="gold"></div>
             </div>
             <div class="title">
                 Gold
@@ -47,7 +47,7 @@
                 &#36;2.5
             </div>
             <div class="icon_wrap">
-                <a href="#" class="icon icon_silver" title="silver"></a>
+                <div href="#" class="icon icon_silver" title="silver"></div>
             </div>
             <div class="title">
                 Silver
