--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
             <li><a href="homework8/homework8.1/index" target="_blank">Cups</a></li>
             <li><a href="homework8/homework8.2/index" target="_blank">Fantastic Design</a></li>
         </ul>
+
+        <h2>Lesson9</h2>
+        <li><a href="homework9/homework9.1/index" target="_blank">Willow Crest</a></li>
         
     </body>
 </html>
