--- a/homework8/homework8.2/index.html
+++ b/homework8/homework8.2/index.html
@@ -48,7 +48,7 @@
             <div class="title">
                 get 80% of dslr photography course bundle
             </div>
-            <div class="autor_photo"></div>
+            <div class="autor_photo"> <img src="img/autor.png" alt=""> </div>
         </div>
 
     </div>
