--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
         <h2>Lesson9</h2>
         <ul>
             <li><a href="homework9/homework9.1/index" target="_blank">Willow Crest</a></li>
+            <li><a href="homework9/homework9.2/index" target="_blank">Like Tears</a></li>
         </ul>
+        <h2>Lesson10</h2>
+        <ul>
+            <li><a href="homework10/cahee/index" target="_blank">ДОЛБАННЫЙ КАХЕ</a></li>
+        </ul>
+        
     </body>
 </html>
