--- a/homework10/cahee/index.html
+++ b/homework10/cahee/index.html
@@ -11,35 +11,37 @@
 </head>
 <body>
     <section>
-        <h2>Blog</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit totam asperiores optio voluptas a ad saepe libero, minus reiciendis illo quasi voluptates eligendi accusamus temporibus dolorem quidem laboriosam!</p>
-        <div class="cards">
-            <div class="card">
-                <img class="image" src="img/cocktail.png" alt="cocktail">
-                <div class="date">20 NOV</div>
-                <div class="wrap">
-                    <div class="topic">Green Smoothies: Too Much of a Good Thing?</div>
-                    <div class="by">By Auskteez - 2 hours ago</div>
+        <div class="container">
+            <h2>Blog</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit totam asperiores optio voluptas a ad saepe libero, minus reiciendis illo quasi voluptates eligendi accusamus temporibus dolorem quidem laboriosam!</p>
+            <div class="cards">
+                <div class="card">
+                    <img class="image" src="img/cocktail.png" alt="cocktail">
+                    <div class="date">20 NOV</div>
+                    <div class="wrap">
+                        <div class="topic">Green Smoothies: Too Much of a Good Thing?</div>
+                        <div class="by">By Auskteez - 2 hours ago</div>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="image" src="img/soup.png" alt="soup">
+                    <div class="date">14 NOV</div>
+                    <div class="wrap">
+                        <div class="topic">Growing Food and a “Thirst” for Innovation</div>
+                        <div class="by">By Auskteez - 3 hours ago</div>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="image" src="img/raspberries.png" alt="raspberries">
+                    <div class="date">10 NOV</div>
+                    <div class="wrap">
+                        <div class="topic">Pesticides & Food: What You Need to Know</div>
+                        <div class="by">By Auskteez - 6 hours ago</div>
+                    </div>
                 </div>
             </div>
-            <div class="card">
-                <img class="image" src="img/soup.png" alt="soup">
-                <div class="date">14 NOV</div>
-                <div class="wrap">
-                    <div class="topic">Growing Food and a “Thirst” for Innovation</div>
-                    <div class="by">By Auskteez - 3 hours ago</div>
-                </div>
-            </div>
-            <div class="card">
-                <img class="image" src="img/raspberries.png" alt="raspberries">
-                <div class="date">10 NOV</div>
-                <div class="wrap">
-                    <div class="topic">Pesticides & Food: What You Need to Know</div>
-                    <div class="by">By Auskteez - 6 hours ago</div>
-                </div>
-            </div>
+            <a href="#" class="view_more">view more</a>
         </div>
-        <a href="#" class="view_more">view more</a>
     </section>
 </body>
 </html>
