add homework 12 (form)

--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
         <ul>
             <li><a href="homework10/cahee/index" target="_blank">ДОЛБАННЫЙ КАХЕ</a></li>
         </ul>
+
+        <ul>
+            <li><a href="homework12/form/index">Форма</a></li>
+        </ul>
         
     </body>
 </html>
