add homework10 ("Who we are")

--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
         <h2>Lesson10</h2>
         <ul>
             <li><a href="homework10/cahee/index" target="_blank">ДОЛБАННЫЙ КАХЕ</a></li>
+            <li><a href="homework10/who we are/index">Who we are</a></li>
         </ul>
-
+        <h2>Lesson12</h2>
         <ul>
             <li><a href="homework12/form/index">Форма</a></li>
         </ul>
