add raw "cahee" for homework11 and fixed "cahee" for homework10

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
             <li><a href="homework10/cahee/index" target="_blank">ДОЛБАННЫЙ КАХЕ</a></li>
             <li><a href="homework10/who we are/index">Who we are</a></li>
         </ul>
+        <h2>Lesson11</h2>
+            <li><a href="homework11/cahee/index">Cahee</a></li>
         <h2>Lesson12</h2>
         <ul>
             <li><a href="homework12/form/index">Форма</a></li>
