--- a/homework10/cahee/index.html
+++ b/homework10/cahee/index.html
@@ -40,7 +40,7 @@
                     </div>
                 </div>
             </div>
-            <a href="#" class="view_more">view more</a>
+            <a href="#" class="btn btn__view_more">view more</a>
         </div>
     </section>
 </body>
