add homework11 "Nike" (not finished)

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         </ul>
         <h2>Lesson11</h2>
             <li><a href="homework11/cahee/index">Cahee</a></li>
+            <li><a href="homework11/nike/index">Nike</a></li>
         <h2>Lesson12</h2>
         <ul>
             <li><a href="homework12/form/index">Форма</a></li>
