--- a/homework11/nike/index.html
+++ b/homework11/nike/index.html
@@ -35,78 +35,17 @@
                 <p class="product__model-type">
                     Unisex Skateboarding Shoe
                 </p>
-                <div class="product__rating rating">
-                    <div class="rating">
-                        <div class="rating__bar">
-                            <label
-                                class="rating__star rating__star--1"
-                                for="rating-star-1"
-                                role="button"
-                                aria-label="Uma estrela"
-                            ></label>
-                            <input
-                                type="checkbox"
-                                id="rating-star-1"
-                                class="rating__checkbox"
-                                name="rating-star-1"
-                                hidden
-                            />
-                            <label
-                                class="rating__star rating__star--2"
-                                for="rating-star-2"
-                                role="button"
-                                aria-label="Uma estrela"
-                            ></label>
-                            <input
-                                type="checkbox"
-                                id="rating-star-2"
-                                class="rating__checkbox"
-                                name="rating-star-2"
-                                hidden
-                            />
-                            <label
-                                class="rating__star rating__star--3"
-                                for="rating-star-3"
-                                role="button"
-                                aria-label="Uma estrela"
-                            ></label>
-                            <input
-                                type="checkbox"
-                                id="rating-star-3"
-                                class="rating__checkbox"
-                                name="rating-star-3"
-                                hidden
-                            />
-                            <label
-                                class="rating__star rating__star--4"
-                                for="rating-star-4"
-                                role="button"
-                                aria-label="Uma estrela"
-                            ></label>
-                            <input
-                                type="checkbox"
-                                id="rating-star-4"
-                                class="rating__checkbox"
-                                name="rating-star-4"
-                                hidden
-                            />
-                            <label
-                                class="rating__star rating__star--5"
-                                for="rating-star-5"
-                                role="button"
-                                aria-label="Uma estrela"
-                            ></label>
-                            <input
-                                type="checkbox"
-                                id="rating-star-5"
-                                class="rating__checkbox"
-                                name="rating-star-5"
-                                hidden
-                            />
-                
-                            <div class="rating__filled-stars"></div>
-                        </div>
-                    </div>
+                <div class="product__rating rating rating2">
+                    <!--
+                		--><a href="#5" title="Give 5 stars">★</a>
+                    <!--
+                		--><a href="#4" title="Give 4 stars">★</a>
+                    <!--
+                		--><a href="#3" title="Give 3 stars">★</a>
+                    <!--
+                		--><a href="#2" title="Give 2 stars">★</a>
+                    <!--
+                		--><a href="#1" title="Give 1 star">★</a>
                 </div>
                 <div class="options__select">
                     <div class="select__product-option">
