Add homework 12 (working with forms)

--- a/homework11/cahee/index.html
+++ b/homework11/cahee/index.html
@@ -11,25 +11,27 @@
 </head>
 <body>
     <header class="page_header">
-        <div class="main__logo">
-            <img class="logo" src="assets/img/logocahee.png" alt="main_logo">
-        </div>
-        <nav>
-            <div class="main_menu">
-                <ul>
-                    <li><a class="menu_point menu_point--active" href="#">Home</a></li>
-                    <li><a class="menu_point" href="#">About</a></li>
-                    <li><a class="menu_point" href="#">Services</a></li>
-                    <li><a class="menu_point" href="#">Gallery</a></li>
-                    <li><a class="menu_point" href="#">Blog</a></li>
-                    <li><a class="menu_point" href="#">Contact</a></li>
-                </ul>
+        <div class="header-container">
+            <div class="main__logo">
+                <img class="logo" src="assets/img/logocahee.png" alt="main_logo">
             </div>
-        </nav>
+            <nav>
+                <div class="main_menu">
+                    <ul>
+                        <li><a class="menu_point menu_point--active" href="#">Home</a></li>
+                        <li><a class="menu_point" href="#">About</a></li>
+                        <li><a class="menu_point" href="#">Services</a></li>
+                        <li><a class="menu_point" href="#">Gallery</a></li>
+                        <li><a class="menu_point" href="#">Blog</a></li>
+                        <li><a class="menu_point" href="#">Contact</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
     </header>
     <main class="header_main">
         <article>
-            <section>
+            <section class="section-white">
                 <div class="container">
                     <div class="container-info">
                         <h2 class="title title_header">
@@ -48,12 +50,12 @@
     </main>
     <main class="section_main">
         <article>
-            <section>
+            <section class="section--blue">
                 <div class="container_main">
                     <div class="picture_cup main_block">
                         <img src="assets/img/cup.png" alt="cup" class="cup">
                     </div>
-                    <div class="main_block">
+                    <div class="main_block main_block-title">
                         <h2 class="title title_main">
                             About Us
                         </h2>
