--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <h2>Lesson12</h2>
         <ul>
             <li><a href="homework12/form/index">Форма</a></li>
-            <li><a href="homework12/cahee footer/index"></a>Footer cahee</li>
+            <li><a href="homework12/cahee footer/index">Footer cahee</a></li>
         </ul>
         
     </body>
