--- a/homework11/cahee/index.html
+++ b/homework11/cahee/index.html
@@ -11,14 +11,14 @@
 </head>
 <body>
     <header class="page_header">
-        <div class="header-container">
+        <div class="container header-container">
             <div class="main__logo">
                 <img class="logo" src="assets/img/logocahee.png" alt="main_logo">
             </div>
             <nav>
                 <div class="main_menu">
                     <ul>
-                        <li><a class="menu_point menu_point--active" href="#">Home</a></li>
+                        <li><a class="menu_point" href="#">Home</a></li>
                         <li><a class="menu_point" href="#">About</a></li>
                         <li><a class="menu_point" href="#">Services</a></li>
                         <li><a class="menu_point" href="#">Gallery</a></li>
