--- a/homework12/form/index.html
+++ b/homework12/form/index.html
@@ -14,8 +14,12 @@
         <div class="autorize-card">
             <div class="autorize-card__header header">
                 <ul class="autorize_method">
-                    <li class="method method--active">Sign in</li>
-                    <li class="method">Join us</li>
+                    <li class="method method--active">
+                        <a href="#">Sign in</a>
+                    </li>
+                    <li class="method">
+                        <a href="#">Join us</a>
+                    </li>
                 </ul>
             </div>
             <div class="autorize-card__box">
