--- a/index.html
+++ b/index.html
@@ -47,13 +47,18 @@
             <li><a href="homework10/who we are/index">Who we are</a></li>
         </ul>
         <h2>Lesson11</h2>
+        <ul>
             <li><a href="homework11/cahee/index">Cahee</a></li>
             <li><a href="homework11/nike/index">Nike</a></li>
+        </ul>
         <h2>Lesson12</h2>
         <ul>
             <li><a href="homework12/form/index">Форма</a></li>
             <li><a href="homework12/cahee footer/index">Footer cahee</a></li>
         </ul>
-        
+        <h2>Lesson13</h2>
+        <ul>
+            <li><a href="homework13/cahee/index">SVG</a></li>
+        </ul> 
     </body>
 </html>
