Add homework "Cahee SCSS" and bug fixes

--- a/index.html
+++ b/index.html
@@ -60,5 +60,9 @@
         <ul>
             <li><a href="homework13/cahee/index">SVG</a></li>
         </ul> 
+        <h2>Lesson14</h2>
+        <ul>
+            <li><a href="homework14/cahee full/index">Cahee SCSS</a></li>
+        </ul>
     </body>
 </html>
