--- a/homework14/cahee full/index.html
+++ b/homework14/cahee full/index.html
@@ -5,10 +5,54 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/stylesheet.css">
+    <link rel="stylesheet" href="assets/css/hamburger.min.css">
     <link rel="stylesheet" href="assets/css/style.min.css">
+    
     <title>Cahee Full</title>
 </head>
 <body>
+    <div class="mobile_menu_block">
+        <div class="mobile__menu ">
+            <ul>
+                <li><a class="mobile_menu_point" href="#first">Home</a></li>
+                <li><a class="mobile_menu_point" href="#second">About</a></li>
+                <li><a class="mobile_menu_point" href="#third">Services</a></li>
+                <li><a class="mobile_menu_point" href="#fourth">Gallery</a></li>
+                <li><a class="mobile_menu_point" href="#sixth">Blog</a></li>
+                <li><a class="mobile_menu_point" href="#seventh">Contact</a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div id="menu_shadow"></div>
+
+    <div class="modal_wrap">
+        <div class="modal_window">
+            <div class="modal_header">
+                MENU
+            </div>
+            <div class="modal_main" id="my_modal">
+                <ul>
+                    <li><a class="modal_menu_point" href="#first">Home</a></li>
+                    <li><a class="modal_menu_point" href="#second">About</a></li>
+                    <li><a class="modal_menu_point" href="#third">Services</a></li>
+                    <li><a class="modal_menu_point" href="#fourth">Gallery</a></li>
+                    <li><a class="modal_menu_point" href="#sixth">Blog</a></li>
+                    <li><a class="modal_menu_point" href="#seventh">Contact</a></li>
+                </ul>
+            </div>
+            <div class="modal_footer">
+                <span class="close modal_close"></span>
+            </div>
+        </div>
+    </div>
+
+    <!-- придумать куда присобачить кнопку открытия модального окна!!!!! -->
+
+    <a href="javascript:void(0)" class="to_top" id="to_top">
+        Up
+    </a>
+
     <header>
         <div class="container container__header">
             <div class="container__header_logo">
@@ -17,19 +61,24 @@
             <nav>
                 <div class="header__menu main_menu">
                     <ul>
-                        <li><a class="menu_point" href="#">Home</a></li>
-                        <li><a class="menu_point" href="#">About</a></li>
-                        <li><a class="menu_point" href="#">Services</a></li>
-                        <li><a class="menu_point" href="#">Gallery</a></li>
-                        <li><a class="menu_point" href="#">Blog</a></li>
-                        <li><a class="menu_point" href="#">Contact</a></li>
+                        <li><a class="menu_point" href="#first">Home</a></li>
+                        <li><a class="menu_point" href="#second">About</a></li>
+                        <li><a class="menu_point" href="#third">Services</a></li>
+                        <li><a class="menu_point" href="#fourth">Gallery</a></li>
+                        <li><a class="menu_point" href="#sixth">Blog</a></li>
+                        <li><a class="menu_point" href="#seventh">Contact</a></li>
                     </ul>
                 </div>
             </nav>
+            <button class="hamburger hamburger--emphatic" type="button">
+            <span class="hamburger-box">
+                <span class="hamburger-inner"></span>
+            </span>
+            </button>
         </div>
     </header>
     <main class="header__main header_main">
-            <section class="section first__section--white">
+            <section id="first" class="section first__section--white">
                 <div class="container container__section--white">
                     <div class="container__info container-info">
                         <h2 class="title first__title title_header">
@@ -44,7 +93,7 @@
                 </div>
                 <div class="scroll_mouse"></div>
             </section>
-            <section class="section second__section--green section--blue">
+            <section id="second" class="section second__section--green section--blue">
                 <div class="container container__section--green container_main">                    
                     <div class="picture_cup main_block">
                         <img src="assets/img/cup.png" alt="cup" class="cup">
@@ -64,7 +113,7 @@
                     </div>
                 </div>
             </section>
-            <section class="section third__section--blue tomato-section">
+            <section id="third" class="section third__section--blue tomato-section">
                 <div class="container container__section--blue container_tomato">
                     <div class="list_container container_inner">
                         <ul class="servises_list">
@@ -99,7 +148,7 @@
                     </div>
                 </div>
             </section>
-            <section class="section fourth__section--yellow">
+            <section id="fourth" class="section fourth__section--yellow">
                 <h2 class="title fourth__title">Gallery</h2>
                 <p class="main_text fourth-section__main_text">
                     Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -122,7 +171,7 @@
                 </div>
                 <a href="#" class="btn btn--grey btn__view_more">view more</a>
             </section>
-            <section class="section fifth__section--white">
+            <section id="fifth" class="section fifth__section--white">
                 <div class="container container_fifth__section--white">
                     <div class="container_inner">
                         <h2 class="title fifth__title">Subscribe To Us</h2>
@@ -138,7 +187,7 @@
                     <button class="btn btn--green" form="subscribe_form" type="submit" >Subscribe</button>
                 </div>
             </section>
-            <section class="section sixth__section--violet">
+            <section id="sixth" class="section sixth__section--violet">
                 <div class="container container__section--violet">
                     <h2 class="title sixth__title">Blog</h2>
                     <p class="main_text sixth-section__main_text--white">
@@ -174,7 +223,7 @@
                     <a href="#" class="btn btn--red btn__view_more">view more</a>
                 </div>
             </section>
-            <section class="section seventh__section">
+            <section id="seventh" class="section seventh__section">
                 <h2 class="title seventh__title  page_disription">
                     Contact
                 </h2>
