Add adaptive "Cahee"

--- a/homework14/cahee full/index.html
+++ b/homework14/cahee full/index.html
@@ -81,7 +81,7 @@
             <section id="first" class="section first__section--white">
                 <div class="container container__section--white">
                     <div class="container__info container-info">
-                        <h2 class="title first__title title_header">
+                        <h2 class="title first__title">
                             Fresh Life
                         </h2>
                         <p class="main_text first-section__main_text--black">
@@ -93,20 +93,17 @@
                 </div>
                 <div class="scroll_mouse"></div>
             </section>
-            <section id="second" class="section second__section--green section--blue">
-                <div class="container container__section--green container_main">                    
-                    <div class="picture_cup main_block">
-                        <img src="assets/img/cup.png" alt="cup" class="cup">
-                    </div>                    
-                    <div class="container__info main_text main_block main_block-title">
-                        <h2 class="title second__title title_main">
+            <section id="second" class="section second__section--green">
+                <div class="container container__section--green">                                                           
+                    <div class="container__info main_block">
+                        <h2 class="title second__title">
                             About Us
                         </h2>
-                        <p class="main_text second-section__main_text--white main_text--white">
+                        <p class="main_text second-section__main_text--white">
                             Abore Cahee magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                             commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.
                         </p>
-                        <p class="main_text second-section__main_text--white main_text--white">
+                        <p class="main_text second-section__main_text--white">
                             Nim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
                             totam rem aperiam, eaque ipsa quae ab illo inventore.
                         </p>
@@ -114,7 +111,7 @@
                 </div>
             </section>
             <section id="third" class="section third__section--blue tomato-section">
-                <div class="container container__section--blue container_tomato">
+                <div class="container container__section--blue revers">
                     <div class="list_container container_inner">
                         <ul class="servises_list">
                             <li class="list">
@@ -143,30 +140,35 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="container_inner container-title">
+                    <div class="container-title">
                         <h2  class="title third__title services">Our Services</h2>
                     </div>
                 </div>
             </section>
             <section id="fourth" class="section fourth__section--yellow">
-                <h2 class="title fourth__title">Gallery</h2>
-                <p class="main_text fourth-section__main_text">
-                    Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                </p>
+                <div class="text_wrap text_wrap--yellow">
+                    <h2 class="title fourth__title">Gallery</h2>
+                    <p class="main_text fourth-section__main_text">
+                        Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    </p>
+                </div>
                 <div class="container container__section--yellow">
-                  <div class="image_wrap w68">
-                      <img src="assets/img/peach.png" alt="peach" class="image_inner">
+                  <div class="picture_wrap">
+                        <div class="image_wrap w68">
+                            <img src="assets/img/peach.png" alt="peach" class="image_inner">
+                        </div>
+                        <div class="image_wrap w31">
+                            <div class="w31_1"><img src="assets/img/blueberry.png" alt="blueberry" class="image_inner image_inner--small"></div>
+                            <div class="w31_1"><img src="assets/img/blackberry.png" alt="blackberry" class="image_inner image_inner--small"></div>
+                        </div>
                   </div>
-                  <div class="image_wrap w31">
-                      <img src="assets/img/blueberry.png" alt="blueberry" class="image_inner image_inner--small">
-
-                      <img src="assets/img/blackberry.png" alt="blackberry" class="image_inner image_inner--small">
-                  </div>
-                  <div class="image_wrap w50">
-                      <img src="assets/img/cupofmilk.png" alt="cupofmilk" class="image_inner">
-                  </div>
-                  <div class="image_wrap w50">
-                      <img src="assets/img/persimmon.png" alt="persimmon" class="image_inner">
+                  <div class="picture_wrap bottom_wrap">
+                      <div class="image_wrap w50">
+                          <img src="assets/img/cupofmilk.png" alt="cupofmilk" class="image_inner">
+                      </div>
+                      <div class="image_wrap w50">
+                          <img src="assets/img/persimmon.png" alt="persimmon" class="image_inner">
+                      </div>
                   </div>
                 </div>
                 <a href="#" class="btn btn--grey btn__view_more">view more</a>
@@ -189,11 +191,13 @@
             </section>
             <section id="sixth" class="section sixth__section--violet">
                 <div class="container container__section--violet">
-                    <h2 class="title sixth__title">Blog</h2>
-                    <p class="main_text sixth-section__main_text--white">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit totam asperiores optio voluptas a ad saepe
-                        libero, minus reiciendis illo quasi voluptates eligendi accusamus temporibus dolorem quidem laboriosam!
-                    </p>
+                    <div class="text_wrap text_wrap--violet">
+                        <h2 class="title sixth__title">Blog</h2>
+                        <p class="main_text sixth-section__main_text--white">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit totam asperiores optio voluptas a ad saepe
+                            libero, minus reiciendis illo quasi voluptates eligendi accusamus temporibus dolorem quidem laboriosam!
+                        </p>
+                    </div>
                     <div class="cards">
                         <div class="card">
                             <img class="image" src="assets/img/cocktail.png" alt="cocktail">
@@ -224,13 +228,15 @@
                 </div>
             </section>
             <section id="seventh" class="section seventh__section">
-                <h2 class="title seventh__title  page_disription">
-                    Contact
-                </h2>
-                <p class="main_text seventh-section__main_text--black  footer-title">
-                    For new projects, ideas, business or anything<br>
-                    you'd like to discuss, contact with me!
-                </p>
+                <div class="text_wrap text_wrap--sky">
+                    <h2 class="title seventh__title  page_disription">
+                        Contact
+                    </h2>
+                    <p class="main_text seventh-section__main_text--black  footer-title">
+                        For new projects, ideas, business or anything
+                        you'd like to discuss, contact with me!
+                    </p>
+                </div>
                 <div class="container container__seventh-section">
                     <div class="mini-container form_fields">
                         <form action="#" method="POST">
@@ -244,7 +250,7 @@
                                 <input name="your_phone" class="area" id="phone" type="tel" placeholder="Your phone number...">
                             </div>
                             <div class="input_info input_info--bigger">
-                                <textarea name="your_message" type="text" placeholder="Your message..."></textarea>
+                                <textarea name="your_message" placeholder="Your message..."></textarea>
                             </div>
                             <div class="input_info button">
                                 <button class="btn btn--blue submit" type="submit">Send</button>
@@ -259,7 +265,7 @@
                             <dt class="list__title">Email</dt>
                             <dd class="list__description"><a href="mailto:cahee@domain.com" target="_blank">cahee@domain.com</a></dd>
                             <dt class="list__title">Phone</dt>
-                            <dd class="list__description"><a href="tel:+012 345 6789">+012 345 6789</a></dd>
+                            <dd class="list__description"><a href="tel:+0123456789">+012 345 6789</a></dd>
                         </dl>
                     </div>
                 </div>
