--- a/homework14/cahee full/index.html
+++ b/homework14/cahee full/index.html
@@ -22,7 +22,7 @@
     <meta property="og:description" content="It`s my first work with large website.">
     <meta property="og:url" content="https://gadkiy.github.io/githomework/homework14/cahee%20full/index">
     <meta property="og:site_name" content="Cahee">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="https://gadkiy.github.io/githomework/homework14/cahee%20full/assets/img/opg_image.png">
     
     <title>Cahee Full</title>
 </head>
