--- a/homework14/cahee full/index.html
+++ b/homework14/cahee full/index.html
@@ -16,6 +16,9 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
     
+    <meta name="robots" content="all" />
+    <meta name="revisit-after" content="1 days" />
+
     <meta property="og:locale" content="uk_UA">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Cahee">
